Testing some stuff

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
 
 
         <circle class="second" r="5" cx="10" cy="10" fill="transparent" stroke="#70ACB4" stroke-width="10"
-            stroke-dasharray="calc(50  * 31.42 / 100) 31.42" />
+            stroke-dasharray="calc(30  * 31.42 / 100) 31.42" />
 
         <circle class="third" r="5" cx="10" cy="10" fill="transparent" stroke="red" stroke-width="10"
-            stroke-dasharray="calc(30  * 31.42 / 100) 31.42" />
+            stroke-dasharray="calc(10  * 31.42 / 100) 31.42" />
+
+        <circle class="fourth" r="5" cx="10" cy="10" fill="transparent" stroke="gray" stroke-width="10"
+            stroke-dasharray="calc(35  * 31.42 / 100) 31.42" />
+
+        <circle class="fifth" r="5" cx="10" cy="10" fill="transparent" stroke="orange" stroke-width="10"
+            stroke-dasharray="calc(5  * 31.42 / 100) 31.42" />F
 
     </svg>
 
