--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <svg class="pie-chart" height="20" width="20" viewBox="0 0 20 20">
-        <circle r="10" cx="10" cy="10" fill="green" />
+        <circle class="background-circle" r="10" cx="10" cy="10" fill="green" />
 
   
 
