--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
 
-    <svg class="pie-chart" height="20" width="20" viewBox="0 0 20 20">
-        <circle class="background-circle" r="10" cx="10" cy="10" fill="green" />
+    <svg class="pie-chart">
+        <circle class="background-circle" fill="green" />
 
   
 
         <!--
-
+    
         <circle class="first" r="5" cx="10" cy="10" fill="transparent" stroke="tomato" stroke-width="10"
             stroke-dasharray="calc(20 * 31.42 / 100) 31.42" />
 
