--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <svg class="pie-chart">
-        <circle class="background-circle" fill="green" />
+        <circle class="background-circle" fill="transparent" />
 
   
 
