adding input fields

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 
 <body>
 
+    <h1>How many slices do you want your graph to have?</h1>
+    <input class="slices-number"></input>
+    <button class="add">Add</button>
+
+    <div class="input-container">
+
+    </div>
+
+    <label>Dimensions</label>
+    <input type="text" placeholder="enter your value here" class="input"></input>
+    <button class="generate-button">Generate</button>
+
     <svg class="pie-chart">
         <circle class="background-circle" fill="transparent" />
 
