--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>How many slices do you want your graph to have?</h1>
+    <h1>Number of sectors</h1>
     <input class="slices-number"></input>
     <button class="add">Add</button>
 
