added range slider to change the size of the chart

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </div>
 
     <label>Dimensions</label>
-    <input type="text" placeholder="enter your value here" class="input"></input>
+    <!-- <input type="text" placeholder="enter your value here" class="input"></input> -->
+    <input class="test" name="size" type="range" min="100" max="500" value="500" data-sizing="px" placeholder="enter your value here" class="input"></input>
     <button class="generate-button">Generate</button>
 
     <svg class="pie-chart">
