--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     </div>
 
+    <div class="labels">
+        
+    </div>
+
     <label>Dimensions</label>
     <!-- <input type="text" placeholder="enter your value here" class="input"></input> -->
     <input class="test" name="size" type="range" min="100" max="500" value="500" data-sizing="px" placeholder="enter your value here" class="input"></input>
