added modal for when there are empty fields

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
 <body>
     <div class="app">
+
+        <div class="modal">
+
+            <p class="modal-message"></p>
+
+            <button class="close-modal">Close</button>
+
+        </div>
+
         <div class="wrapper">
             <h1>Number of sectors</h1>
             <input class="slices-number"></input>
