--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
         </div>
 
+        <div class="overlay">
+
+            
+        </div>
+
         <div class="wrapper">
             <h1>Number of sectors</h1>
             <input class="slices-number"></input>
