added a checkbox to switch between pie and doughnut mode

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 
 
             <label>Dimensions</label>
-            <input class="test" name="size" type="range" min="100" max="500" value="500" data-sizing="px"
+            <input class="test" name="size" type="range" min="100" max="400" value="400" data-sizing="px"
                 placeholder="enter your value here" class="input"></input>
 
             <button class="generate-button">Generate</button>
         </div>
         <div class="chart-display">
+            <input type="checkbox" class="doughnut">Doughnut</input>
             <div class="labels">
 
             </div>
