Styled a few elements and added more rules for empty fields

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="overlay">
 
-            
+
         </div>
 
         <div class="wrapper">
@@ -43,7 +43,10 @@
             <button class="generate-button">Generate</button>
         </div>
         <div class="chart-display">
-            <input type="checkbox" class="doughnut">Doughnut</input>
+            <div class="chart-mode">
+                <label for="doughnut" class="doughnut-label">Doughnut</label>
+                <input name="doughnut" type="checkbox" class="doughnut"></input>
+            </div>
             <div class="labels">
 
             </div>
@@ -52,21 +55,6 @@
 
                 <circle class="background-circle" fill="transparent" />
 
-
-
-                <!--
-    
-        <circle class="first" r="5" cx="10" cy="10" fill="transparent" stroke="tomato" stroke-width="10"
-            stroke-dasharray="calc(20 * 31.42 / 100) 31.42" />
-
-
-        <circle class="second" r="5" cx="10" cy="10" fill="transparent" stroke="#70ACB4" stroke-width="10"
-            stroke-dasharray="calc(50  * 31.42 / 100) 31.42" />
-
-        <circle class="third" r="5" cx="10" cy="10" fill="transparent" stroke="red" stroke-width="10"
-            stroke-dasharray="calc(30  * 31.42 / 100) 31.42" />
-
-        -->
 
             </svg>
         </div>
