Added rules to deal with duplicates

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 
-            <label>Dimensions</label>
+            <label class="dimensions">Dimensions</label>
             <input class="test" name="size" type="range" min="100" max="400" value="400" data-sizing="px"
                 placeholder="enter your value here" class="input"></input>
 
