added icons and an event listener to alternate between visible and invisible

--- a/index.html
+++ b/index.html
@@ -35,17 +35,23 @@
             </div>
 
 
-
-            <label class="dimensions">Dimensions</label>
-            <input class="test" name="size" type="range" min="100" max="400" value="400" data-sizing="px"
-                placeholder="enter your value here" class="input"></input>
-
+            <div class="resize-section">
+                <img class="expand" style="width: 18px" src="https://i.ya-webdesign.com/images/how-to-resize-a-png-file-3.png">
+                <input class="test slider" name="size" type="range" min="100" max="400" value="400" data-sizing="px"
+                    placeholder="enter your value here" class="input"></input>
+            </div>
             <button class="generate-button">Generate</button>
         </div>
         <div class="chart-display">
             <div class="chart-mode">
-                <label for="doughnut" class="doughnut-label">Doughnut</label>
-                <input name="doughnut" type="checkbox" class="doughnut"></input>
+
+                <div class="change-view">
+                    <!-- <label for="doughnut" class="doughnut-label">Doughnut</label> -->
+
+                    <img src="https://image.flaticon.com/icons/png/512/102/102548.png" class="view not-full">
+                    <img src="https://image.flaticon.com/icons/png/512/119/119760.png" class="view full">
+                    <input name="doughnut" type="checkbox" class="doughnut"></input>
+                </div>
             </div>
             <div class="labels">
 
