not satisfied yet

--- a/index.html
+++ b/index.html
@@ -49,15 +49,10 @@
             <button class="generate-button">Generate</button>
         </div>
         <div class="chart-display">
+            
             <div class="chart-mode">
 
-                <div class="change-view">
-                    <!-- <label for="doughnut" class="doughnut-label">Doughnut</label> -->
 
-                    <img src="https://image.flaticon.com/icons/png/512/102/102548.png" class="view not-full">
-                    <img src="https://image.flaticon.com/icons/png/512/119/119760.png" class="view full">
-                    <input name="doughnut" type="checkbox" class="doughnut"></input>
-                </div>
             </div>
             <div class="labels">
 
@@ -69,6 +64,16 @@
 
 
             </svg>
+            <div class="change-view">
+                <!-- <label for="doughnut" class="doughnut-label">Doughnut</label> -->s
+
+                <img src="https://image.flaticon.com/icons/png/512/102/102548.png" class="view not-full">
+                <img src="https://image.flaticon.com/icons/png/512/119/119760.png" class="view full">
+                <input name="doughnut" type="checkbox" class="doughnut"></input>
+            </div>
+
+
+            
         </div>
     </div>
 
