--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
 
         <div class="wrapper">
-            <h1>Number of sectors</h1>
-            <input class="slices-number"></input>
+            <h2>Number of sectors</h2>
+            <input class="slices-number test"></input>
             <button class="add">Add</button>
 
             <div class="input-container">
@@ -36,33 +36,37 @@
 
 
             <div class="resize-section">
-                <img class="expand" style="width: 18px" src="https://i.ya-webdesign.com/images/how-to-resize-a-png-file-3.png">
+                <img class="expand" style="width: 18px"
+                    src="https://i.ya-webdesign.com/images/how-to-resize-a-png-file-3.png">
                 <input class="test slider" name="size" type="range" min="100" max="400" value="400" data-sizing="px"
                     placeholder="enter your value here" class="input"></input>
             </div>
             <button class="generate-button">Generate</button>
         </div>
         <div class="chart-display">
-            <div class="chart-mode">
+            <div class="testing">
+                <div class="chart-mode">
 
-                <div class="change-view">
-                    <!-- <label for="doughnut" class="doughnut-label">Doughnut</label> -->
+                    <div class="change-view">
+                        <!-- <label for="doughnut" class="doughnut-label">Doughnut</label> -->
 
-                    <img src="https://image.flaticon.com/icons/png/512/102/102548.png" class="view not-full">
-                    <img src="https://image.flaticon.com/icons/png/512/119/119760.png" class="view full">
-                    <input name="doughnut" type="checkbox" class="doughnut"></input>
+                        <img src="https://image.flaticon.com/icons/png/512/102/102548.png" class="view not-full">
+                        <img src="https://image.flaticon.com/icons/png/512/119/119760.png" class="view full">
+                        <input name="doughnut" type="checkbox" class="doughnut"></input>
+                    </div>
                 </div>
-            </div>
-            <div class="labels">
+                <div class="labels">
+
+                </div>
+                <svg class="pie-chart">
+
+
+                    <circle class="background-circle" fill="transparent" />
+
+
+                </svg>
 
             </div>
-            <svg class="pie-chart">
-
-
-                <circle class="background-circle" fill="transparent" />
-
-
-            </svg>
         </div>
     </div>
 
