changed the CSS: made changes to the layout and removed unused code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="wrapper">
             <h2>Number of sectors</h2>
-            <input class="slices-number test"></input>
+            <input class="slices-number testa"></input>
             <button class="add">Add</button>
 
             <div class="input-container">
@@ -36,10 +36,9 @@
 
 
             <div class="resize-section">
-                <img class="expand" style="width: 18px"
-                    src="https://i.ya-webdesign.com/images/how-to-resize-a-png-file-3.png">
-                <input class="test slider" name="size" type="range" min="100" max="400" value="400" data-sizing="px"
-                    placeholder="enter your value here" class="input"></input>
+                <img class="expand" style="width: 15px" src="https://static.thenounproject.com/png/19994-200.png">
+                <input class="test slider" name="size" type="range" min="100" max="350" value="350" data-sizing="px"
+                    class="input"></input>
             </div>
             <button class="generate-button">Generate</button>
         </div>
@@ -48,7 +47,7 @@
                 <div class="chart-mode">
 
                     <div class="change-view">
-                        <!-- <label for="doughnut" class="doughnut-label">Doughnut</label> -->
+
 
                         <img src="https://image.flaticon.com/icons/png/512/102/102548.png" class="view not-full">
                         <img src="https://image.flaticon.com/icons/png/512/119/119760.png" class="view full">
